margin spacing fix

--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
     background-color: rgb(38, 183, 134);
     color: white;
     text-align: center;
-    margin: 200px;
+    margin-top: 100px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
